--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             --has-todos: #3a3a3a;
             --completed-todos: #1a4a1a;
             --incomplete-todos: #4a1a1a;
-            --weekend: rgba(255, 255, 255, 0.05);
+            --weekend: #2a2a2a;  /* Subtle darker shade for weekends */
             --month-start: #666666;
             --month-end: #666666;
         }
